@@ -613,7 +613,7 @@
         (argname (third argument)))
     (if jni-type
         (cond ((string= type "SEL")
-               (insert "JFINDOBJCMETHOD (env, ")
+               (insert "JENSUREOBJCMETHOD (env, ")
                (insert argname)
                (insert ")"))
               ((string= jni-type "jstring")
@@ -621,7 +621,7 @@
                (insert (format "%d" string-pos))
                (insert "]"))
               ((string= jni-type "jclass")
-               (insert "JFINDOBJCCLASS (env, ")
+               (insert "JENSUREOBJCCLASS (env, ")
                (insert argname)
                (insert ")"))
               ((string= jni-type "jobject")
@@ -751,10 +751,10 @@
                      (insert "JSWITCHUPDATE (env, jobj, JINSTANTIATEUSING (env, jobj), ")
                      t)
                     ((string= java-return "Class")
-                     (insert "(jclass) JFINDJAVA (")
+                     (insert "(jclass) JENSUREJAVA (env, ")
                      t)
                     ((string= java-return "Object")
-                     (insert "JFINDJAVA (")
+                     (insert "JENSUREJAVA (env, ")
                      t)
                     ((string= java-return "String")
                      (insert "(*env)->NewStringUTF (env, ")
